--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Faker para gerir massa dinamica -->
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-junit5</artifactId>
