--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -22,25 +22,23 @@ jobs:
           cache: maven
 
       - name: Cache do Maven
-        uses: actions/cache@v4
+        uses: actions/cache@v3
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-m2-
 
-      - name: Instalar dependências e rodar testes
-        run: mvn clean test -Dmaven.test.failure.ignore=true --batch-mode
+      - name: Executar testes e gerar Allure Results
+        run: mvn clean test
 
-      - name: Gerar relatório Allure
-        if: always()
-        run: |
-          mkdir -p allure-results
-          mvn allure:report
+      - name: Gerar Allure Report
+        run: mvn allure:report
 
-      - name: Publicar artefatos do Allure
+      - name: Publicar Allure Report no GitHub Pages
         if: always()
-        uses: actions/upload-artifact@v4
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          name: allure-report
-          path: target/site/allure-maven-plugin
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./target/site/allure-maven-plugin
+          publish_branch: gh-pages
