--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,6 @@
         </dependency>
     </dependencies>
 
-
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -69,6 +68,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.1.2</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
+                    </systemPropertyVariables>
+                </configuration>
             </plugin>
 
             <!-- Plugin do Allure -->
@@ -79,6 +83,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
